# yos

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.zig  build.zig.zon  compile_flags.txt  limine.cfg  limine.conf
.cargo/: config.toml
crates/kernel/: Cargo.toml
crates/kernel/src/: allocator.rs  gdt.rs  idt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  panic_handler.rs  vga.rs
crates/kernel/src/apps/: shell.rs
crates/kernel/src/task/: executer.rs  keyboard.rs  mod.rs
include/yos/gpio/raspi3/: pins.h
kernel/: build.zig  build.zig.zon  kernel.mk  link.ld  main.c
kernel/bootloader/: bootloader.mk  start.s
kernel/src/: arch.zig  main.zig  tty.zig
kernel/src/arch/x86_64/: instructions.zig
src/kernel/: acpi.zig  arch.zig  console.zig  crash.zig  higher_half.zig  initrd.zig  main.zig  memory.zig  os.zig  ps2.zig  scheduler.zig  screen.zig  smp.zig  stream.zig  syscall.zig  tty.zig
src/kernel/arch/: x86_64.zig
src/kernel/arch/x86_64/: cpu.zig  gdt.zig  idt.zig  instructions.zig  ioapic.zig  lapic.zig  linker.ld  paging.zig  pic.zig  syscall.zig
src/kernel/drivers/: acpi.zig
src/kernel/drivers/keyboard/: Key.zig  key.zig  ps2.zig
src/kernel/fs/: devfs.zig  tarfs.zig  tmpfs.zig  vfs.zig
src/kernel/locks/: SpinLock.zig
src/user/: yos.zig
src/user/apps/gui/: main.zig
src/user/apps/init/: display.zig  loop.zig  main.zig
src/user/apps/ls/: main.zig
src/user/apps/mkdir/: main.zig
src/user/apps/pwd/: main.zig
src/user/arch/: x86_64.zig
src/user/libraries/: abi.zig  arch.zig  core.zig  yos.zig
ycc/: ycc.mk
(+14 files in other folders)
