[workspace]
resolver = "2"

members = [
    "crates/*"
]

[workspace.dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
conquer-once = { version = "0.2", default-features = false }
crossbeam-queue = { version = "0.3", default-features = false, features = ["alloc"] }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
lazy_static = { version = "1", features = ["spin_no_std"] }
linked_list_allocator = "0.10"
pic8259 = "0.11"
spin = "0.9"
volatile = "0.2"
x86_64 = "0.15"
