[package]
name = "ykernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = { workspace = true }
conquer-once = { workspace = true }
crossbeam-queue = { workspace = true }
futures-util = { workspace = true }
lazy_static = { workspace = true }
linked_list_allocator = { workspace = true }
pic8259 = { workspace = true }
pc-keyboard = { workspace = true }
spin = { workspace = true }
volatile = { workspace = true }
x86_64 = { workspace = true }
